# pseudo_rgbd_slam

./: .coverage  .gitignore  CMakeLists.txt  README.md  generate_figures.py  package.xml  setup.cfg  setup.py
config/: TUM1.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
evaluation/: depth_quality.py  trajectory_eval.py
launch/: pseudo_slam.launch.py
pseudo_rgbd_slam/: __init__.py  node_a_broadcaster.py  node_b_depth_estimator.py  record_demo.py
report/: report.md
scripts/: download_tum_dataset.sh  install_docker.sh
src/: node_c_pseudo_slam.cpp
tests/: _test_utils.py  test_depth_quality.py  test_trajectory_eval.py
